added db image on docker-compose

--- a/node-service/Dockerfile
+++ b/node-service/Dockerfile
@@ -1,8 +1,11 @@
 FROM node:11
 
-RUN apt-get update && apt-get install -y wget
-
-ADD . /node-app
 WORKDIR /node-app
+
+COPY package.json .
+
 RUN npm install
+
+COPY . .
+
 CMD ["npm", "run", "start"]
