--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
 version: '3.5'
 services:
+  db:
+    image: mariadb
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
   rabbitmq-server:
     image: rabbitmq:3.7-management
     hostname: rabbitmq-server
     ports:
       - "15672:15672"
       - "5672:5672"
-    healthcheck:
-        test: ["CMD", "curl", "-f", "http://localhost:15672"]
-        interval: 30s
-        timeout: 10s
-        retries: 5
     volumes:
       - "/opt/rabbitmq:/var/lib/rabbitmq"
   node-service:
@@ -18,10 +19,13 @@ services:
     restart: on-failure
     volumes:
       - ./node-service:/node-app
+      - /node-app/node_modules
     links:
       - rabbitmq-server
+      - db
     depends_on:
       - rabbitmq-server
+      - db
     tty: true
     ports:
       - "3000:3000"
@@ -32,6 +36,8 @@ services:
       - ./python-service:/python-app
     depends_on:
       - rabbitmq-server
+      - db
     links:
         - rabbitmq-server
+        - db
     tty: true
