--- a/node-service/package.json
+++ b/node-service/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.5.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "ioredis": "^4.6.2"
   }
 }
