v1 run all services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,48 +12,57 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
-  php-queue-service:
-    build:
-      dockerfile: Dockerfile-queue
-      context: ./quiz-service
-    restart: on-failure
-    volumes:
-      - ./quiz-service:/quiz-app
-    links:
-      - redis
-      - db
-    depends_on:
-      - redis
-      - db
-    tty: true
-  php-service:
+  ui_gateway:
     build:
       dockerfile: Dockerfile
-      context: ./quiz-service
+      context: ./schoolar-ui-gateway
     restart: on-failure
     volumes:
-      - ./quiz-service:/quiz-app
-    links:
-      - db
-    depends_on:
-      - db
-    tty: true
-    ports:
-      - "8000:8000"
-  node-service:
-    build: ./node-service
-    restart: on-failure
-    volumes:
-      - ./node-service:/node-app
-      - /node-app/node_modules
-    links:
-      - redis
-      - db
-    depends_on:
-      - redis
-      - db
-    tty: true
+      - /app/node_modules
+      - /app
     ports:
       - "3000:3000"
+    command: ["npm", "run", "dev"]
+    links:
+      - redis
+    depends_on:
+      - redis
+    tty: true
+  live_qa:
+    build:
+      dockerfile: Dockerfile
+      context: ./schoolar-live_qa-service
+    restart: on-failure
+    ports:
+      - "4000:3000"
+    volumes:
+      - /app/node_modules
+      - /app
+    command: ["npm", "run", "dev"]
+    links:
+      - redis
+      - db
+    depends_on:
+      - redis
+      - db
+    tty: true
+  user:
+    build:
+      dockerfile: Dockerfile
+      context: ./schoolar-user-service
+    restart: on-failure
+    command: ["npm", "run", "dev"]
+    ports:
+      - "5000:3000"
+    volumes:
+      - /app/node_modules
+      - /app
+    links:
+      - redis
+      - db
+    depends_on:
+      - redis
+      - db
+    tty: true
 volumes:
   redis_data:
