--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,26 @@
 version: '3.5'
 services:
   db:
+    container_name: mariadb
     image: mariadb
     ports:
       - "3306:3306"
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
   redis:
+    container_name: redis
     image: redis:alpine
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
+  mongo:
+    container_name: mongo
+    image: mongo
+    volumes:
+      - ./data:/data/db
+    ports:
+      - "27017:27017"
 volumes:
   redis_data:
 
