--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,5 @@
 version: '3.5'
 services:
-  db:
-    container_name: mariadb
-    image: mariadb
-    ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
   redis:
     container_name: redis
     image: redis:alpine
@@ -21,6 +14,26 @@ services:
       - ./data:/data/db
     ports:
       - "27017:27017"
+  admin-ui:
+    container_name: admin_ui
+    image: epr3/schoolar-admin-ui:latest
+  user-ui:
+    container_name: user_ui
+    image: epr3/schoolar-user-ui:latest
+  ui-gateway:
+    container_name: ui_gateway
+    image: epr3/schoolar-ui-gateway:latest
+    environment:
+      - JWT_SECRET=123456
+      - FIREBASE_PROJECT_ID=schoolar-baebf
+      - FIREBASE_BUCKET_URL=schoolar-baebf.appspot.com
+    command: ["pm2-runtime", "pm2.config.json"]
+  nginx:
+    build: .
+    container_name: nginx
+    command: ["nginx", "-g", "daemon off;"]
+    ports:
+      - 80:80
 volumes:
   redis_data:
 
