--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,9 @@ server {
     server_name     api.resster.com;
     location / {
         proxy_pass  http://ui_gateway:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
 server {
