--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -1,5 +1,11 @@
 version: '3.5'
 services:
+  admin-ui:
+    container_name: admin_ui
+    image: epr3/schoolar-admin-ui:latest
+  user-ui:
+    container_name: user_ui
+    image: epr3/schoolar-user-ui:latest
   ui-gateway:
     container_name: ui_gateway
     image: epr3/schoolar-ui-gateway:latest
@@ -9,6 +15,12 @@ services:
       - FIREBASE_BUCKET_URL=schoolar-baebf.appspot.com
       - SENTRY_DSN=https://ddcca23f6d414cc9b11223720c8090ac@sentry.io/1453537
     command: ["pm2-runtime", "pm2.config.json"]
+  nginx:
+    build: .
+    container_name: nginx
+    command: ["nginx", "-g", "daemon off;"]
+    ports:
+      - 80:80
 
 networks:
   default:
